[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antiviral-mass-balance"
version = "0.1.0"
description = "Mass-balance and antiviral metrics for plant-virus phytoremediation (Chemosphere companion code)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Diaiti Zure" },
  { name = "Hsion-Wen David Kuo" },
  { name = "Aleksandra Drizo" },
]
keywords = [
  "phytoremediation",
  "virus",
  "mass-balance",
  "environmental-engineering",
  "surrogate-virus",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.8"]

[project.urls]
Repository = "https://github.com/planttalks/antiviral-mass-balance"
"Article (DOI)" = "https://doi.org/10.1016/j.chemosphere.2023.141101"
"Article (ScienceDirect)" = "https://www.sciencedirect.com/science/article/abs/pii/S0045653523033714"

[tool.setuptools]
py-modules = ["antiviral_mass_balance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["antiviral_mass_balance"]
branch = true

[tool.coverage.report]
fail_under = 85
omit = ["tests/*"]
